--- a/src/app/layout/components/topnav/topnav.component.html
+++ b/src/app/layout/components/topnav/topnav.component.html
@@ -4,30 +4,25 @@
     </button>
     <div class="nav-brand">
         <img src="../../../../assets/images/logo.png" height="40px" />
-        
+
     </div>
     <form class="hidden-sm" style="margin-left: 20px; margin-top: 5px">
-        
+
     </form>
     <span class="nav-spacer"></span>
-   
-    
+
+
     <button class="hidden-sm" mat-icon-button [matMenuTriggerFor]="profile">
         <mat-icon>account_circle</mat-icon>
     </button>
     <mat-menu #profile="matMenu">
         <button mat-menu-item>
             <mat-icon>person</mat-icon>
-            <span>{{ 'Profile' | translate }}</span>
+            <a [routerLink]="['/profile']">
+                <span>{{ 'Profile' | translate }}</span>
+            </a>
         </button>
-        <button mat-menu-item>
-            <mat-icon>inbox</mat-icon>
-            <span>{{ 'Inbox' | translate }}</span>
-        </button>
-        <button mat-menu-item>
-            <mat-icon>settings</mat-icon>
-            <span>{{ 'Settings' | translate }}</span>
-        </button>
+
     </mat-menu>
     <button mat-icon-button (click)="onLoggedout()">
         <mat-icon>exit_to_app</mat-icon>
