--- a/src/app/layout/users/users.component.html
+++ b/src/app/layout/users/users.component.html
@@ -113,10 +113,20 @@
                     </ng-container>
 
                     <ng-container matColumnDef="status">
-                        <th mat-header-cell *matHeaderCellDef>Status</th>
+                        <th mat-header-cell *matHeaderCellDef>Action</th>
                         <td mat-cell *matCellDef="let element">
-                            <span [ngStyle]="{'color':'green'}" *ngIf="element.status == 1">Active</span>
-                            <span [ngStyle]="{'color':'red'}" *ngIf="element.status == 0">Inactive</span>
+                            
+                            <!-- <button mat-mini-fab color="primary">
+                                <mat-icon>edit</mat-icon>
+                            </button> -->
+
+                            <mat-slide-toggle *ngIf="element.status == 0"  (change)="onStatusChange($event,element.userId)" class="" [color]="color" [checked]="'false'" [disabled]="'false'">
+
+                            </mat-slide-toggle>
+                            <mat-slide-toggle *ngIf="element.status == 1"  (change)="onStatusChange($event,element.userId)" class="" [color]="color" [checked]="'true'" [disabled]="'false'">
+
+                            </mat-slide-toggle>
+
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="action">
@@ -124,13 +134,17 @@
                         <td mat-cell *matCellDef="let element">
                             <button mat-raised-button class="bggreen">loc 1</button>
                             <b>==></b>
-                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Failed'?'red':'green','color':'white'}">Loc 2</button>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Failed'?'red':'green','color':'white'}">Loc
+                                2</button>
                             <b>==></b>
-                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed' ?'green':'grey','color':'white'}">Loc 3</button>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed' ?'green':'grey','color':'white'}">Loc
+                                3</button>
                             <b>==></b>
-                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 4</button>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc
+                                4</button>
                             <b>==></b>
-                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 5</button>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc
+                                5</button>
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
