--- a/src/app/layout/users/users.component.scss
+++ b/src/app/layout/users/users.component.scss
@@ -22,3 +22,25 @@ td {
     color: white
 }
 .mr-10{margin-right:10px;}
+
+
+
+/* CSS to change Default/'Accent' color */
+
+::ng-deep .mat-slide-toggle-thumb {
+    background-color: red;
+}
+::ng-deep .mat-slide-toggle-bar {
+    background-color: #66222c;
+}
+
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+    background-color: green; /*replace with your color*/
+}
+
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+    background-color:#164424;  /*replace with your color*/
+}
+
+
+
